--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <div class="card-container" id="andreas">
         <img class="round" src="https://randomuser.me/api/portraits/men/33.jpg" alt="user" />
-        <h2>Andreas</h2>
-        <h6>Hjemmeby</h6>
-        <p>Fødseldato <br/> IT og Informasjonssytemer</p>
+        <h2>Anders</h2>
+        <h6>Klepp</h6>
+        <p>1998<br/> IT og Informasjonssytemer</p>
     </div>
         <div class="card-container" id="tore">
         <img class="round" src="https://randomuser.me/api/portraits/men/42.jpg" alt="user" />
