--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="card-container" id="eivind">
             <img class="round" src="https://randomuser.me/api/portraits/men/43.jpg" alt="user" />
             <h2>Eivind</h2>
-            <h6>Hjemmeby</h6>
-            <p>Fødseldato<br/> IT og Informasjonssytemer</p>
+            <h6>Molde</h6>
+            <p>2000<br/> IT og Informasjonssytemer</p>
         </div>
 
         <div class="card-container" id="aleksander">
@@ -45,8 +45,8 @@
         <div class="card-container" id="rasmus">
         <img class="round" src="https://randomuser.me/api/portraits/men/36.jpg" alt="user" />
         <h2>Rasmus</h2>
-        <h6>Hjemmeby</h6>
-        <p>Fødseldato <br/> IT og Informasjonssytemer</p>
+        <h6>Halden</h6>
+        <p>1997 <br/> IT og Informasjonssytemer</p>
     </div>
     </div>
     <div class="container">
