--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="card-container" id="stina">
             <img class="round" src="https://randomuser.me/api/portraits/women/31.jpg" alt="user" />
             <h2>Stina</h2>
-            <h6>Hjemmeby</h6>
-            <p>Fødseldato<br/> IT og Informasjonssytemer</p>
+            <h6>Namsos</h6>
+            <p>2001<br/> IT og Informasjonssytemer</p>
         </div>
     </div>
 </head>
