oppdaterte min informasjon
oppdaterte min informasjon

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="card-container" id="aleksander">
             <img class="round" src="https://randomuser.me/api/portraits/men/17.jpg" alt="user" />
             <h2>Aleksander</h2>
-            <h6>Hjemmeby</h6>
-            <p>Fødseldato <br/> IT og Informasjonssytemer</p>
+            <h6>Kristiansand</h6>
+            <p>21.02.01<br/> IT og Informasjonssytemer</p>
         </div>
         <div class="card-container" id="rasmus">
         <img class="round" src="https://randomuser.me/api/portraits/men/36.jpg" alt="user" />
