Oppdatert informasjon om Tore

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="card-container" id="tore">
         <img class="round" src="https://randomuser.me/api/portraits/men/42.jpg" alt="user" />
         <h2>Tore</h2>
-        <h6>Hjemmeby</h6>
-        <p>Fødseldato <br/> IT og Informasjonssytemer</p>
+        <h6>Lørenskog</h6>
+        <p>1997 <br/> IT og Informasjonssytemer</p>
     </div>
     </div>
     <div class="container">
